--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,7 @@ dependencies:
   firebase_core: ^3.12.1
   firebase_messaging: ^15.2.4
   flutter_local_notifications: ^18.0.1
-  mailer: ^6.4.1
+  http: ^0.13.4
 
 dev_dependencies:
   flutter_test:
