--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,9 @@ dependencies:
   flutter_local_notifications: ^18.0.1
   http: ^0.13.4
   youtube_player_iframe: ^4.0.4
+  firebase_auth: ^5.5.1
+  google_sign_in: ^6.3.0
+  cloud_firestore: ^5.6.5
 
 dev_dependencies:
   flutter_test:
