--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   firebase_auth: ^5.5.1
   google_sign_in: ^6.3.0
   cloud_firestore: ^5.6.5
+  shared_preferences: ^2.5.2
 
 dev_dependencies:
   flutter_test:
